apps/v3/src/content/docs/changelog.mdx
---
title: Changelog
description: Latest updates and announcements.
toc: false
---

## February 2025 - Virtualizer

We've added a new Virtualizer documentation page.

### Virtualizer

Learn how to use the `virtua` library to efficiently render large lists and grids by virtualizing your components. This documentation provides practical examples and guidance on integrating `virtua` with your existing components.

<ComponentPreview name="virtualizer-demo" />

[Read the docs](/docs/components/virtualizer)

## February 2025 - Sortable and Control Group

We've added a new Sortable component and a new Control Group component.

### Sortable

A drag and drop component for reordering items in a list or grid. Sortable is built on top of [@dnd-kit](https://dndkit.com)'s [sortable](https://docs.dndkit.com/presets/sortable) preset.

<ComponentPreview name="sortable-demo" />

[See more examples](/docs/components/sortable)

### Control Group

A component for grouping form controls like text inputs, buttons, selects and other elements into a single cohesive unit. When used together with Input Base, you can create highly customizable and flexible input layouts for a variety of use cases.

<ComponentPreview name="control-group-demo" />

[Read the docs](/docs/components/control-group)

### Thank you

I'd like to thank everyone who has been using this project, providing feedback and contributing to it. I really appreciate it. Thank you 🙏
