apps/v4/src/content/docs/changelog.mdx
---
title: Changelog
description: Latest updates and announcements.
---

## June 2025 - Phone Input

We've added a new `<PhoneInput />` component, built on top of [react-phone-number-input](https://github.com/catamphetamine/react-phone-number-input). This component provides a phone number input field with country selection and formatting.

<ComponentPreview name="phone-input-demo" />

[Read the docs](/docs/primitives/phone-input)

## May 2025 - Tailwind v4 and React 19

We're excited to announce support for Tailwind v4 and React 19! This major update brings significant improvements and new features to the UI components library. Please refer to the [Tailwind v4](/docs/tailwind-v4) documentation for more details on migrating your project and taking advantage of the new capabilities.

### Wheel Picker

Along with this major update, we've also added a new `<WheelPicker />` component, built on top of [react-wheel-picker](https://github.com/ncdai/react-wheel-picker). This component provides an iOS-like interface for selecting options from a scrollable wheel.

<ComponentPreview name="wheel-picker-demo" />

[Read the docs](/docs/components/wheel-picker)

## February 2025 - Virtualizer

We've added a new Virtualizer documentation page.

### Virtualizer

Learn how to use the `virtua` library to efficiently render large lists and grids by virtualizing your components. This documentation provides practical examples and guidance on integrating `virtua` with your existing components.

<ComponentPreview name="virtualizer-demo" />

[Read the docs](/docs/utilities/virtualizer)

## February 2025 - Sortable and Control Group

We've added a new `<Sortable />` component and a new `<ControlGroup />` component.

### Sortable

A drag and drop component for reordering items in a list or grid. `<Sortable />` is built on top of [@dnd-kit](https://dndkit.com)'s [sortable](https://docs.dndkit.com/presets/sortable) preset.

<ComponentPreview name="sortable-demo" />

[See more examples](/docs/utilities/sortable)

### Control Group

A component for grouping form controls like text inputs, buttons, selects and other elements into a single cohesive unit. When used together with Input Base, you can create highly customizable and flexible input layouts for a variety of use cases.

<ComponentPreview name="control-group-demo" />

[Read the docs](/docs/components/control-group)

### Thank you

I'd like to thank everyone who has been using this project, providing feedback and contributing to it. I really appreciate it. Thank you 🙏
